# de

./: .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  manage.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt
defects/: actions.py  admin.py  apps.py  asgi.py  exports.py  forms.py  middlewares.py  models.py  reports.py  settings.py  stats.py  tests.py  timelines.py  urls.py  views.py  wsgi.py
defects/data/: anniversaries-report.pptx
defects/fixtures/: groups.json  users.json
defects/migrations/: 0001_initial.py  0002_incident_created_by_incident_time_created.py  0002_solution_reliability_incident_name.py  0003_alter_incident_equipment.py  0003_solution_actual_completion_date_string_and_more.py  0004_alter_solution_actual_completion_date_and_more.py  0004_incident_status.py  0005_alter_equipment_options_alter_incident_options_and_more.py  0005_solution_area.py  0006_incidentimage.py  0006_reliabilityincident_mine_and_more.py  0007_alter_reliabilityincident_description_and_more.py  0007_area_operation_alter_incident_area_and_more.py  0008_alter_reliabilityincident_notification_time_received.py  0008_rename_notification_time_received_incident_notification_time_published.py  0009_rename_description_reliabilityincident_long_description_and_more.py  0010_alter_sectionengineer_options_and_more.py  0010_rename_mine_reliabilityincident_operation.py  0011_feedback.py  0011_reliabilityincident_area.py  0012_remove_incident_section_engineer.py  0012_remove_reliabilityincident_rca_file.py  0013_incident_section_engineer_alter_incident_created_by.py  0013_reliabilityincident_immediate_action_taken_and_more.py  0014_remove_solution_reliability_incident_name_and_more.py  0015_alter_solution_status.py  0016_remove_seniorassetmanager_user_and_more.py  0017_approval_created_by_alter_approval_user.py  0018_remove_incident_notification_am_reviewed_and_more.py  0019_incident_notification_time_approved.py  0020_delete_useraction.py  0021_alter_incident_status.py  0022_delete_sectionengineeringmanager.py  0023_incident_trigger_alter_incident_operation.py  (+29 more)
(+69 files in other folders)
