[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anglo-defects"
version = "24.7.030"
requires-python = ">=3.12"
dependencies = [
  "django==5.0.4",
  "python-dotenv==1.0.1",
  "whitenoise==6.6.0",
  "gunicorn==22.0.0",
  "dj-database-url==2.1.0",
  "django-auditlog==3.0.0",
  "redis==5.0.3",
  "sentry_sdk==1.45.0",
  "django-import-export==3.3.8",
  "django-crispy-forms==2.1",
  "crispy-bootstrap5==2024.2",
  "pillow==10.3.0",
  "huey==2.5.0",
  "weasyprint==61.2",
]

[project.scripts]
"manage.py" = "manage.py:main"

[project.optional-dependencies]
dev = [
  "pip-tools",
  "coverage",
]


[tool.setuptools]
packages = ["defects"]
include-package-data = true

[tool.coverage.run]
omit = [
  "*/migrations/*.py",
  "manage.py",
  "*/__init__.py",
]
